fixed #center alignment

--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,8 @@
 #container {
     position: relative;
     width: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
 #left {
     position: absolute;
